removed also Collections.singletonList()